--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,11 @@ footer p {
   height: 3px;
   background-color: #2e7d32;
 }
+.emaillabel{
+    display: none;
+
+}
+
 
 /* Tablet screens (≤ 1024px) */
 @media (max-width: 1024px) {
